wp-content/themes/sixgill/css/custom/all_general.css
body, p {
	font-family: "Lato", serif, sans-serif;
}

.title-left-col {
	font-family: "Lato", serif, sans-serif;
	font-size: 30px;
	font-weight: bold;
	text-transform: uppercase;
	color: #0051C6;
	text-align: right;
	padding-right: 30px;
	margin-right: 0px;
}

.text-right-col, .text-right-col-noline {
	border-left: 1px solid #9C9C9C;
	padding-left: 30px;
	text-align: left;
	font-size: 15px;
	color: #686868;
}

.text-right-col-noline {
	border-left:0px;
}

.my_boxSolution_title {
	font-family: "Lato", serif, sans-serif;
	font-size:27px;
	font-weight:bolder;
	text-transform:uppercase;
	color:#000;
	border:4px solid #000000;
	padding:10px 20px;
	text-align:center;
	margin-bottom: 35px;
}

.my_txtSolution {
	border: 0px solid #FF0004;
}

.my_containerSolution {
	max-width: 930px;
	padding-top: 75px;
	margin-top: 0px;
	margin-bottom: 0px;
	padding-bottom: 0px;
	border: 0px solid #FE0004;
}

.footer-learn-text, .footer-links-block {
	text-align: left;
	border: 0px solid #FE0004;
	color: #FFF;
	font-size: 20px;
	margin-top: 12px;
	font-weight: normal;
	padding: 0px 20px;
}

.footer-links-block {
	text-decoration:none;
	font-size: 14px;
	color: #FFF
}

.footer-links-block a {
	margin: 0 10px;
	color: #FFF;
	border-bottom: 0px;
}

.footer-links-block a:hover {
	color: #CCC;
}

.footer_Schedule, .footer_Copy {
	text-align: right;
	border: 0px solid #FE0004;
	color: #ffffff;
	font-size: 20px;
	margin-top: 12px;
	font-weight: normal;
	padding: 0px 20px;
}

.footer_Copy {
	font-size: 14px;
}

.my_headerBoxSolution {
	margin-bottom: 30px;
}

.press-date, .press-by-author, .single-post-title, .single-post-subtitle {
	font-family: "Lato", serif, sans-serif;
}

.single-post-title, .single-post-subtitle {
	color: white;
}

.press-by-author {
	color: #999999;
}

.single-post-title {
	margin-bottom: 0px;
}

.posts-list {
	font-size: 16px;
}

.blog-post-title {
	font-size: 24px;
	font-weight: bold;
	color: #2e2e2e;
}

.blog-post-suptitle {
	font-weight: bold;
	margin-bottom: 0px;
	color: #b8b8b8;
	line-height: 1em !important;
}

.widget_mc4wp_form_widget {
	margin-top: 10px;
}

.global-social-buttons-separator {
	margin-top: 220px;
	margin-bottom: 16px;
}

.menu-social-link {
	padding-right: 13px !important;
	padding-left: 13px !important;
}

.menu-social-link:last-child {
	padding-right: 0px !important;
}

#menu-background {
	display: none;
	z-index: 9997;
	position: fixed;
	height: 100%;
	width: 100%;
	background: white;
	top: 0;
	left: 0;
}

label {
	text-align: left;
}

.yikes-easy-mc-success-message {
	display: none !important;
}

.max-width-720 {
	max-width: 720px;
}

.fancy-title-without-bottom {
	margin-bottom: 0px;
}

.author-with-date-blogPost {
	font-size: 14px;
	line-height: 1.5;
	color: #999999;
}

.menu-link-selected > div {
	color: #0051c6 !important;
}

.solutions-blog-content > p {
	text-align: left !important;
}

.my_containerSolution_indent {
	margin-left: 10%;
	margin-right: 10%;
	max-width: inherit;
}

.left-aligned {
	display: inline-block;
	text-align: left;
}

section {
	z-index: 2;
}

#slider {
	z-index: 1;
}

hr:not([class]) {
	border-top: 1px solid #000000;
}

ul, ol {
	list-style-position: inside;
}

ul:not([class]), ol:not([class]) {
	color: #000;
}

ul:not([class]) li {
	list-style: none;
	margin-bottom: 0.5em;
}

ul:not([class]) li:not(.has-span):before{
	content: "• ";
}
ul:not([class]) li:not(.has-span):before, .bullet-color {
	color: #4ddb5a;
}


.no-horizontal-padding {
	padding-left: 0px !important;
	padding-right: 0px !important;
}

#press-button-back, #blog-button-back, #solutions-button-back {
	margin: 30px 0px 0px 0px;
}

#myModal {
	z-index: 9999;
}

.side-header #logo {
	margin-left: 15px;
}

.alignment-menu-right {
	margin-right: 15px;
}

#footer-scedule {
	background-image: url('/wp-content/themes/sixgill/images/td/solutions_footer.png');
	background-size: cover;
}

.col-48-left {
	width: 48%;
	float: left;
}

.col-48-right {
	width: 48%;
	float: right;
}

#single-page-content > div {
	position: relative;
}

#sidebar-floating {
	position: fixed;
}

#sidebar-fixed {
	position: absolute;
}

.floating-social-buttons {
	z-index: 100;
}

.share-buttons-list {
	list-style-type: none;
}

